--- a/debian/control
+++ b/debian/control
@@ -3,20 +3,17 @@ Section: libs
 Priority: optional
 Maintainer: Steve M. Robbins <smr@debian.org>
 Standards-Version: 4.3.0
-Build-Depends: dpkg-dev (>= 1.22.5), debhelper (>= 9), libncurses-dev (>= 6.1+20180210), pkgconf
+Build-Depends: debhelper (>= 9), libncurses-dev (>= 6.1+20180210), pkgconf
 Homepage: http://invisible-island.net/cdk
 Vcs-Git: https://salsa.debian.org/debian/libcdk5.git
 Vcs-Browser: https://salsa.debian.org/debian/libcdk5
 
-Package: libcdk5t64
-X-Time64-Compat: libcdk5nc6
-Provides: ${t64:Provides}
-Breaks: libcdk5nc6 (<< ${source:Version})
+Package: libcdk5nc6
 Architecture: any
 Multi-Arch: same
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Conflicts: libcdk5
-Replaces: libcdk5nc6, libcdk5
+Replaces: libcdk5
 Description: C-based curses widget library
  CDK stands for "Curses Development Kit". CDK sits on top of the curses
  library and provides 22 ready to use widgets for rapid application
@@ -27,7 +24,7 @@ Description: C-based curses widget library
 Package: libcdk5-dev
 Architecture: any
 Section: libdevel
-Depends: libcdk5t64 (= ${binary:Version}), libncurses-dev, ${misc:Depends}
+Depends: libcdk5nc6 (= ${binary:Version}), libncurses-dev, ${misc:Depends}
 Description: C-based curses widget library (development files)
  CDK stands for "Curses Development Kit". CDK sits on top of the curses
  library and provides 22 ready to use widgets for rapid application
@@ -50,4 +47,4 @@ Description: C-based curses widget library (examples and demos)
  widget types required for a robust interface. Widgets can be combined
  to create complex widgets if needed.
  .
- This package contains examples and demos about libcdk5t64.
+ This package contains examples and demos about libcdk5nc6.
